flycheck-stan/examples/example_error_undefined_variable.stanc3out.txt

Semantic error in 'examples/example_error_undefined_variable.stan', line 15, column 10 to column 12:
   -------------------------------------------------
    13:  transformed parameters {
    14:    vector[J] theta;
    15:    theta = mu + tau * eta;
                   ^
    16:  }
    17:  model {
   -------------------------------------------------

Identifier 'mu' not in scope.

